# linear-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md
linear_cli/: __init__.py  api.py  auth.py  cli.py  config.py  models.py
tests/: __init__.py  test_api.py  test_auth.py  test_cli.py
